# Bitshifters

./: .gitignore  README.md
BitshiftersHackaton/: CMakeLists.txt
BitshiftersHackaton/BitshiftersHackaton/: BitshiftersHackaton.cpp  BitshiftersHackaton.h  CMakeLists.txt  FileLogger.cpp  FileLogger.h  YOLO.cpp  YOLO.h
PythonSQL/: .gitignore  app.py  pysql_query.py  pysql_read.py  pysql_write.py  txt_parser.py
frontend/: about.html  index.html  pysql_query.py  serve.py  team.html
frontend/src/: style.css
frontend/static/src/: style.css
frontend/templates/: about.html  index.html  team.html
