# CMakeList.txt : CMake project for BitshiftersHackaton, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (BitshiftersHackaton "BitshiftersHackaton.cpp" "BitshiftersHackaton.h" "FileLogger.cpp")

# TODO: Add tests and install targets if needed.
